[tool.poetry]
name = "home"
version = "0.1.0"
description = ""
authors = ["agoyal <goyal.arpit.91@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
Flask = "^2.1.3"
iiflapis="^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
